--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Gavin Wilson
 email: gavinwilson@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A personal website for Gavin Wilson. Configuration, retrospectives, and personal interests.
+  A personal website for Gavin Wilson. Code, configuration, retrospectives, and personal interests.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://gavinwilson.name" # the base hostname & protocol for your site
 twitter_username: gavinw51
