--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   A personal website for Gavin Wilson. Code, configuration, retrospectives, and personal interests.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://gavinwilson.name" # the base hostname & protocol for your site
-twitter_username: gavinw51
+twitter_username: gavin_wilson
 github_username:  gwilson2151
 
 # Build settings
