--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: gavinwilson@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A personal website for Gavin Wilson. Code, configuration, retrospectives, and personal interests.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://gavinwilson.name" # the base hostname & protocol for your site
+url: "https://gavinwilson.name" # the base hostname & protocol for your site
 twitter_username: gavin_wilson
 github_username:  gwilson2151
 
